--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -157,7 +157,8 @@
     &__logo {
         display: flex;
         align-items: flex-end;
-        gap: 0.5em;
+        
+        & > * + * { margin-inline-start: 0.5em }
         
         height: calc(var(--font-size-header-logo) * 1.5);
         
@@ -208,7 +209,8 @@
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
-                gap: 2rem;
+                
+                & > * + * { margin-block-start: 2rem }
                 
                 pointer-events: none;
                 
@@ -251,7 +253,8 @@
         &__nav {
             display: flex;
             flex-direction: row;
-            gap: 3rem;
+            
+            & > * + * { margin-inline-start: 3rem }
         }
         
         &__logo {
