--- a/src/app/pages/benefits/benefits.component.scss
+++ b/src/app/pages/benefits/benefits.component.scss
@@ -70,7 +70,8 @@
             flex-wrap: wrap;
             align-items: stretch;
             justify-content: center;
-            gap: 4rem;
+            
+            & > * + * { margin-inline-start: 4rem }
             
             list-style: none;
             
@@ -83,7 +84,8 @@
                 flex-direction: column;
                 align-items: center;
                 justify-content: flex-start;
-                gap: 1rem;
+                
+                & > * + * { margin-block-start: 1rem }
                 
                 max-width: 35rem;
                 
