--- a/src/app/pages/requirements/requirements.component.scss
+++ b/src/app/pages/requirements/requirements.component.scss
@@ -59,7 +59,8 @@ h1,
         display: flex;
         flex-direction: column;
         align-items: stretch;
-        gap: 5rem;
+        
+        & > * + * { margin-block-start: 5rem }
         
         margin-block-start: 2rem;
         
@@ -73,7 +74,8 @@ h1,
             flex-direction: row;
             align-items: center;
             justify-content: flex-start;
-            gap: var(--gap);
+            
+            & > * + * { margin-inline-start: var(--gap) }
             
             i {
                 position: relative;
