--- a/src/app/pages/timeline/timeline.component.scss
+++ b/src/app/pages/timeline/timeline.component.scss
@@ -20,7 +20,8 @@
         
         display: flex;
         flex-direction: column;
-        gap: var(--gap);
+        
+        & > * + * { margin-block-start: var(--gap) }
         
         margin-block: var(--gap);
         
@@ -29,8 +30,6 @@
         li {
             background-color: styles.$color-white;
             @include styles.shadow-offset(1);
-            
-            gap: var(--padding);
             
             padding: var(--padding);
             
